--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+    <nav class="top-navigation">
+        <div class="content"></div>
+    </nav>
 
 </body>
 </html>
