--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <title>Landing Page</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <nav class="top-navigation">
         <div class="content">
+            <ul class="links">
+                <li class="active">Meet Karma</li>
+                <li>How it Works</li>
+                <li>Store</li>
+                <li>Blog</li>
+                <li>Help</li>
+                <li>Log in</li>
+            </ul>
             <img class="logo" src="images/karma-logo.svg" alt="Karma" width="26px">
         </div>
     </nav>
