--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
         </div>
     </nav>
 
-    <section class="introduction"></section>
+    <section class="introduction">
+        <div class="content">
+            <h1>Introducing Karma</h1>
+            <h3>Bring WiFi with you, everywhere you go.</h3>
+        </div>
+    </section>
 
 </body>
 </html>
