Three icon section

--- a/index.html
+++ b/index.html
@@ -30,5 +30,26 @@
         </div>
     </section>
 
+    <section class="cases">
+        <div class="content">
+            <h2>Everyone needs a little Karma</h2>
+
+            <div class="devices">
+                <img src="images/icon-devices.svg" width="127px" height="127px" alt="Internet for all devices">
+                <h3>Internet for all devices</h3>
+            </div>
+
+            <div class="devices">
+                <img src="images/icon-coffee.svg" width="127px" height="127px" alt="Boost your productivity">
+                <h3>Boost your productivity</h3>
+            </div>
+
+            <div class="devices">
+                <img src="images/icon-refill.svg" width="127px" height="127px" alt="Pay as You Go">
+                <h3>Pay as You Go</h3>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
