--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
-    <!-- <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" type="text/css" href="font-awesome-4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" type="text/css" href="font-awesome-4.3.0/css/font-awesome.min.css"> -->
+    <link rel="shortcut icon" type="image/x-icon"  href="favicon.ico">
 </head>
 <body>
     <nav class="top-navigation">
-        <div class="content">
+        <div class="content group">
             <ul class="links">
                 <li class="active">Meet Karma</li>
                 <li>How it Works</li>
@@ -38,17 +39,17 @@
             <h2>Everyone needs a little Karma</h2>
 
             <div class="devices">
-                <img src="images/icon-devices.svg" width="127px" height="127px" alt="Internet for all devices">
+                <img src="images/icon-devices.svg" alt="Internet for all devices">
                 <h3>Internet for all devices</h3>
             </div>
 
             <div class="devices">
-                <img src="images/icon-coffee.svg" width="127px" height="127px" alt="Boost your productivity">
+                <img src="images/icon-coffee.svg" alt="Boost your productivity">
                 <h3>Boost your productivity</h3>
             </div>
 
             <div class="devices">
-                <img src="images/icon-refill.svg" width="127px" height="127px" alt="Pay as You Go">
+                <img src="images/icon-refill.svg" alt="Pay as You Go">
                 <h3>Pay as You Go</h3>
             </div>
 
