--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Landing Page</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- <link rel="stylesheet" type="text/css" href="font-awesome-4.3.0/css/font-awesome.min.css"> -->
     <link rel="shortcut icon" type="image/x-icon"  href="favicon.ico">
