device list added

--- a/index.html
+++ b/index.html
@@ -38,20 +38,24 @@
 
             <h2>Everyone needs a little Karma</h2>
 
-            <div class="devices">
-                <img src="images/icon-devices.svg" alt="Internet for all devices">
-                <h3>Internet for all devices</h3>
-            </div>
+            <ul class="devices">
 
-            <div class="devices">
-                <img src="images/icon-coffee.svg" alt="Boost your productivity">
-                <h3>Boost your productivity</h3>
-            </div>
+                <li>
+                    <img src="images/icon-devices.svg" alt="Internet for all devices">
+                    <h3>Internet for all devices</h3>
+                </li>
 
-            <div class="devices">
-                <img src="images/icon-refill.svg" alt="Pay as You Go">
-                <h3>Pay as You Go</h3>
-            </div>
+                <li>
+                    <img src="images/icon-coffee.svg" alt="Boost your productivity">
+                    <h3>Boost your productivity</h3>
+                </li>
+
+                <li>
+                    <img src="images/icon-refill.svg" alt="Pay as You Go">
+                    <h3>Pay as You Go</h3>
+                </li>
+
+            </ul>
 
         </div>
     </section>
@@ -73,7 +77,7 @@
                 </li>
             </ul>
 
-            <h4 class="copyright">&copy; Karma Mobility, Inc.</h4>
+            <p class="copyright">&copy; Karma Mobility, Inc.</p>
         </div>
     </footer>
 
