--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li>Help</li>
                 <li>Log in</li>
             </ul>
-            <img class="logo" src="images/karma-logo.svg" alt="Karma" width="26px">
+            <img class="logo" src="images/karma-logo.svg" alt="Karma">
         </div>
     </nav>
 
